--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
     <p>To generate an access token, open:<br>
       <code id="login"></code>
     </p>
-    <script>
-      document.getElementById('login').textContent = 'https://kite.trade/connect/login?api_key=YOUR_API_KEY&v=3';
-    </script>
+<script>
+  document.getElementById('login').textContent =
+    'https://kite.zerodha.com/connect/login?api_key=y6yy8wlvd2e8i0n4&v=3';
+</script>
+
   </body>
 </html>
